service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complement-ui
spec:
  type: ClusterIP
  selector:
    app: complement-ui
  ports:
    - port: 80
      targetPort: 3000
