ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: complement-ui-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: ui.santansre.shop
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: complement-ui
#             port: 
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: complement-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ui.santansre.shop
    secretName: ui-tls-secret
  rules:
  - host: ui.santansre.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: complement-ui
            port:
              number: 80
